# CrosswordToolkitPythonServer

./: .gitignore  README.md  ctserver-environment.yml  pyproject.toml
crosswordtoolkit/: manage.py
crosswordtoolkit/crosswordtoolkit/: asgi.py  settings.py  urls.py  wsgi.py
crosswordtoolkit/crosswordtoolkitapi/: admin.py  apps.py  models.py  urls.py  views.py
crosswordtoolkit/crosswordtoolkitapi/migrations/: 0001_initial.py
crosswordtoolkitserver/: anagram.py  dictionary.py  server.py
crosswordtoolkitserver/static/words/: 1-letter-words.json
crosswordtoolkitserver/tests/: test_anagram.py
