[tool.poetry]
name = "crosswordtoolkitserver"
version = "0.1.0"
description = "Python based server for Crossword Toolkit"
authors = ["Mathonwy Thomas <mathonwy.thomas@gmail.com>"]
license = "GPL 3.0"

packages = [
    { include = "crosswordtoolkit" , from = "./crosswordtoolkit"},
    { include = "crosswordtoolkitserver" , from = "./crosswordtoolkitserver"},
]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.6.0"
Django = "^4.1"
pytest = "^7.1.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
mypy = "^0.991"
django-stubs = "^1.13.1"

[mypy_django_plugin]
ignore_missing_model_attributes = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
